--- a/Html_urmaps/main2.0.html
+++ b/Html_urmaps/main2.0.html
@@ -199,7 +199,7 @@
 
         <!-- Mapa -->
         <section class="centered-image">
-          <img src="Mapa.png" alt="" width="85%" height="85%" />
+          <img src="Mapa.png" alt="" />
         </section>
       </div>
     </main>
