El commit de la fe

--- a/UrMaps_2_fase/main.html
+++ b/UrMaps_2_fase/main.html
@@ -137,7 +137,9 @@
     
             <!-- Mapa -->
             <section class="centered-image">
-                <img id = "mapa" src="Mapa.png" alt="" width="700px" height="700px">
+                <img id = "mapa" src="Mapa.png" alt="" width="700px" height="700px" constrols style="display: block;">
+                <!--Video provisional-->
+                <video id="media-video" src="J_path.gif" controls style="display: none;"></video> 
             </section>
 
             <!--formulario-->
