--- a/Html_urmaps/Patoslide.html
+++ b/Html_urmaps/Patoslide.html
@@ -12,19 +12,19 @@
     <div class="slider">
         <div class="list">
             <div class="item">
-                <img src="Pato1.jpg" alt="">
+                <img src="patoimg/Pato1.jpg" alt="">
             </div>
             <div class="item">
-                <img src="Pato2.jpg" alt="">
+                <img src="patoimg/Pato2.jpg" alt="">
             </div>
             <div class="item">
-                <img src="patochiquito.jpg" alt="">
+                <img src="patoimg/patochiquito.jpg" alt="">
             </div>
             <div class="item">
-                <img src="patopa.jpg" alt="">
+                <img src="patoimg/patopa.jpg" alt="">
             </div>
             <div class="item">
-                <img src="Pato3.jpeg" alt="">
+                <img src="patoimg/Pato3.jpeg" alt="">
             </div>
         </div>
         <div class="buttons">
