Path correctly showed

--- a/UrMaps_2_fase/main.html
+++ b/UrMaps_2_fase/main.html
@@ -139,7 +139,7 @@
             <section class="centered-image">
                 <img id = "mapa" src="Mapa.png" alt="" width="700px" height="700px" constrols style="display: block;">
                 <!--Video provisional-->
-                <video id="media-video" src="J_path.gif" controls style="display: none;"></video> 
+                <!--<img id="media-video" src="J_path.gif" controls style="display: none;"></img>-->
             </section>
 
             <!--formulario-->
