--- a/UrMaps_2_fase/main.html
+++ b/UrMaps_2_fase/main.html
@@ -33,7 +33,7 @@
     <header class="header-gris">
         <nav class="Nav-titulo">
             <div class="container-fluid">
-                <img src="LogoU.png" alt="Logo" width="200px" height="90px" class="d-inline-block align-text-top">
+                <img id = "logoU"src="LogoU.png" alt="Logo" width="200px" height="90px" class="d-inline-block align-text-top">
                 <a class="navbar-brand" href="Main.html">
                     UrMaps
                 </a>
@@ -135,6 +135,30 @@
                 </div>
             </section>
     
+            <!--Carousel-->
+            <div id="carouselExample" class="carousel slide">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="..." class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="..." class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="..." class="d-block w-100" alt="...">
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+
+
             <!-- Mapa -->
             <section class="centered-image">
                 <img id = "mapa" src="Mapa.png" alt="" width="700px" height="700px" constrols style="display: block;">
