--- a/UrMaps_2_fase/main.html
+++ b/UrMaps_2_fase/main.html
@@ -135,17 +135,17 @@
                 </div>
             </section>
     
-            <!--Carousel-->
+            <!--Carousel
             <div id="carouselExample" class="carousel slide">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="..." class="d-block w-100" alt="...">
+                  <img src="patoimg\Pato1.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="..." class="d-block w-100" alt="...">
+                  <img src="patoimg\Pato2.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="..." class="d-block w-100" alt="...">
+                  <img src="patoimg\patochiquito.jpg" class="d-block w-100" alt="...">
                 </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -158,7 +158,7 @@
               </button>
             </div>
 
-
+            -->
             <!-- Mapa -->
             <section class="centered-image">
                 <img id = "mapa" src="Mapa.png" alt="" width="700px" height="700px" constrols style="display: block;">
