--- a/UrMaps_2_fase/main.html
+++ b/UrMaps_2_fase/main.html
@@ -159,7 +159,7 @@
                     <div id="carouselExample" class="carousel slide" data-bs-ride="carousel" style="width: 40%; position: absolute; top: 10%; left: 5%;">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="patoimg\Pato1.jpg" class="d-block w-100" alt="...">
+                                <img src="patoimg\INSTRUCCIONES UR MAPS.jpg" class="d-block w-100" alt="...">
                             </div>
                             <div class="carousel-item">
                                 <img src="patoimg\Pato2.jpg" class="d-block w-100" alt="...">
