--- a/UrMaps_2_fase/index.html
+++ b/UrMaps_2_fase/index.html
@@ -72,7 +72,7 @@
                         <div class="Button">
                             <button class="btn Button_config" type="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
-                                <img src="Barra_de_menu.png" alt="" width="80px" height="60px">
+                                <img src="buttons/Barra_de_menu.png" alt="" width="80px" height="60px">
                             </button>
                             <div class="dropdown-content">
                                 <a href="#">Info</a>
@@ -85,7 +85,7 @@
                         <div class="Button">
                             <button class="btn Button_config" type="button" data-bs-toggle="dropdown"
                                 aria-expanded="false" id="showFormBtn">
-                                <img src="Museo.png" alt="" width="60px" height="60px">
+                                <img src="buttons/Museo.png" alt="" width="60px" height="60px">
                             </button>
                             <div id="formContainer" class="dropdown-content" style="display: none;">
                                 <form id="pathForm">
@@ -112,7 +112,7 @@
                         <div class="Button">
                             <button class="btn Button_config" type="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
-                                <img src="Estrella.png" alt="" width="60px" height="60px">
+                                <img src="buttons/Estrella.png" alt="" width="60px" height="60px">
                             </button>
                             <div class="dropdown-content">
                                 <a href="#"> Recientes </a>
@@ -124,7 +124,7 @@
                         <div class="Button">
                             <button class="btn Button_config" type="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
-                                <img src="Ubicacion.png" alt="" width="60px" height="60px">
+                                <img src="buttons/Ubicacion.png" alt="" width="60px" height="60px">
                             </button>
                             <div class="dropdown-content">
                                 <a href="#"> Ubicacion actual </a>
@@ -142,7 +142,7 @@
                     </section>
                             <button class="btn Button_config" type="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
-                                <img src="Tres_puntos.png" alt="" width="60px" height="60px">
+                                <img src="buttons/Tres_puntos.png" alt="" width="60px" height="60px">
                             </button>
                             <div class="dropdown-content">
                                 <a href="#"> Contacto </a>
@@ -160,9 +160,9 @@
                 <!-- Barra de búsqueda -->
                 <!-- Botones de redes sociales -->
                 <div class="social-icons">
-                    <button class="btn btn-primary rounded-circle"><img src="facebook.png" alt="Facebook"></button>
-                    <button class="btn btn-primary rounded-circle"><img src="twitter.png" alt="Twitter"></button>
-                    <button class="btn btn-primary rounded-circle"><img src="instagram.png" alt="Instagram"></button>
+                    <button class="btn btn-primary rounded-circle"><img src="buttons/facebook.png" alt="Facebook"></button>
+                    <button class="btn btn-primary rounded-circle"><img src="buttons/twitter.png" alt="Twitter"></button>
+                    <button class="btn btn-primary rounded-circle"><img src="buttons/instagram.png" alt="Instagram"></button>
                 </div>
             </section>
 
