--- a/UrMaps_2_fase/index.html
+++ b/UrMaps_2_fase/index.html
@@ -131,17 +131,16 @@
 
         <!-- Script para el formulario de búsqueda -->
         <script src="map_script.js"></script>
-
         <!--formulario de búsqueda de ruta-->
-        <div id="formContainer" class="dropdown-content">
-            <form id = "pathForm">
-                <label>¿A dónde deseas ir?</label>
-                <select class="form-control">
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
+        <div id="formContainer">
+            <form id="pathForm">
+                <label for="destination">¿A dónde deseas ir?</label>
+                <select id="destination" class="form-control" multiple>
+                    <option value="1">Option 1</option>
+                    <option value="2">Option 2</option>
+                    <option value="3">Option 3</option>
+                    <option value="4">Option 4</option>
+                    <option value="5">Option 5</option>
                 </select>
                 <button type="submit">Ir</button>
             </form>
