--- a/UrMaps_2_fase/index.html
+++ b/UrMaps_2_fase/index.html
@@ -136,11 +136,17 @@
             <form id="pathForm">
                 <label for="destination">¿A dónde deseas ir?</label>
                 <select id="destination" class="form-control" multiple>
-                    <option value="1">Option 1</option>
-                    <option value="2">Option 2</option>
-                    <option value="3">Option 3</option>
-                    <option value="4">Option 4</option>
-                    <option value="5">Option 5</option>
+                    <option value="1"> Entrada </option>
+                    <option value="2"> Escalera Caldas </option>
+                    <option value="3"> Baños Carrasquilla </option>
+                    <option value="4"> Entrada Teatrino </option>
+                    <option value="5"> Síndico </option>
+                    <option value="3"> Aula Mutis </option>
+                    <option value="4"> La Bordadita </option>
+                    <option value="5"> Cuenteros </option>
+                    <option value="4"> Escaleras Casur </option>
+                    <option value="5"> Comedor </option>
+
                 </select>
                 <button type="submit">Ir</button>
             </form>
