--- a/UrMaps_2_fase/index.html
+++ b/UrMaps_2_fase/index.html
@@ -41,15 +41,20 @@
         crossorigin="anonymous"></script>
 
     <!-- Encabezado -->
+
+
     <header class="header-gris">
         <nav class="Nav-titulo">
             <div class="container-fluid">
-                <img src="LogoU.png" alt="Logo" width="200px" height="90px" class="d-inline-block align-text-top">
+                <img src="LOGO_HORIZONTAL_UR_BLANCO.png" alt="Logo" width="200px" height="90px" class="imgU" >
+                <div>
                 <a class="navbar-brand" href="index.html">
-                    UrMaps
+                    <img src = "URMAPSHORI.png" alt="logourmaps" height="90px"  class="URLOGO">
                 </a>
+                </div>
             </div>
         </nav>
+ 
 
         <!-- Sección de cambio de idioma -->
         <section>
