--- a/UrMaps_2_fase/index.html
+++ b/UrMaps_2_fase/index.html
@@ -6,7 +6,7 @@
 <html lang="ES">
 
 <head>
-    <link rel = "icon" type="image" href = "urmaps_ico_grande.ico">
+    <link rel = "icon" type="image" href = "icons/urmaps_ico_grande.ico">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>URMAPS</title>
@@ -46,10 +46,10 @@
     <header class="header-gris">
         <nav class="Nav-titulo">
             <div class="container-fluid">
-                <img src="LOGO_HORIZONTAL_UR_BLANCO.png" alt="Logo" width="200px" height="90px" class="imgU" >
+                <img src="logos/LOGO_HORIZONTAL_UR_BLANCO.png" alt="Logo" width="200px" height="90px" class="imgU" >
                 <div>
                 <a class="navbar-brand" href="index.html">
-                    <img src = "URMAPSHORI.png" alt="logourmaps" height="90px"  class="URLOGO">
+                    <img src = "logos/URMAPSHORI.png" alt="logourmaps" height="90px"  class="URLOGO">
                 </a>
                 </div>
             </div>
