Sidebar en index.html

--- a/UrMaps_2_fase/index.html
+++ b/UrMaps_2_fase/index.html
@@ -88,6 +88,15 @@
                         </div>
                     </div>
                 </section>
+    
+                <div class="container-fluid">
+                    <ul id="pathList">
+                        <li><button type="button">Claustro</button></li>
+                        <li><button type="button">Torre 1</button></li>
+                        <li><button type="button">Torre 2</button></li>
+                        <li><button type="button">Cafetería</button></li>
+                    </ul>
+                </div>
 
                 <!-- Botón para desplegue de info universidad-->
                 <section>
