Más opciones, más flow

--- a/UrMaps_2_fase/index.html
+++ b/UrMaps_2_fase/index.html
@@ -80,10 +80,15 @@
 
                 <div class="container-fluid">
                     <ul id="pathList">
-                        <li><button type="button">Claustro</button></li>
-                        <li><button type="button">Torre 1</button></li>
-                        <li><button type="button">Torre 2</button></li>
-                        <li><button type="button">Cafetería</button></li>
+                        <li><button type="button">Entrada</button></li>
+                        <li><button type="button">Escalera Caldas</button></li>
+                        <li><button type="button">Baños Carrasquilla</button></li>
+                        <li><button type="button">Entrada Teatrino</button></li>
+                        <li><button type="button">Síndico</button></li>
+                        <li><button type="button">Aula Mutis</button></li>
+                        <li><button type="button">Cuenteros</button></li>
+                        <li><button type="button">Escaleras Casur</button></li>
+                        <li><button type="button">Comedor</button></li>
                     </ul>
                 </div>
 
