--- a/UrMaps_2_fase/index.html
+++ b/UrMaps_2_fase/index.html
@@ -80,15 +80,16 @@
 
                 <div class="container-fluid">
                     <ul id="pathList">
-                        <li><button type="button">Entrada</button></li>
-                        <li><button type="button">Escalera Caldas</button></li>
-                        <li><button type="button">Baños Carrasquilla</button></li>
-                        <li><button type="button">Entrada Teatrino</button></li>
-                        <li><button type="button">Síndico</button></li>
-                        <li><button type="button">Aula Mutis</button></li>
-                        <li><button type="button">Cuenteros</button></li>
-                        <li><button type="button">Escaleras Casur</button></li>
-                        <li><button type="button">Comedor</button></li>
+                        <li><button type="button" id="m2">Entrada</button></li>
+                        <li><button type="button" id="m3">Escalera Caldas</button></li>
+                        <li><button type="button" id="m4">Baños Carrasquilla</button></li>
+                        <li><button type="button" id="m5">Entrada Teatrino</button></li>
+                        <li><button type="button" id="m6">Síndico</button></li>
+                        <li><button type="button" id="m7">Aula Mutis</button></li>
+                        <li><button type="button" id="m7">La bordadita</button></li>
+                        <li><button type="button" id="m8">Cuenteros</button></li>
+                        <li><button type="button" id="m9">Escaleras Casur</button></li>
+                        <li><button type="button" id="m10">Comedor</button></li>
                     </ul>
                 </div>
 
