--- a/UrMaps_2_fase/index.html
+++ b/UrMaps_2_fase/index.html
@@ -100,8 +100,8 @@
                 <!-- Barra de búsqueda -->
                 <!-- Botones de redes sociales -->
                 <div class="social-icons">
-                    <button class="btn btn-primary rounded-circle"><img src="buttons/facebook.png"
-                            alt="Facebook"></button>
+                    <button class="btn btn-primary rounded-circle" href = "https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+                        <img src="buttons/facebook.png" alt="Facebook"></button>
                     <button class="btn btn-primary rounded-circle"><img src="buttons/twitter.png"
                             alt="Twitter"></button>
                     <button class="btn btn-primary rounded-circle"><img src="buttons/instagram.png"
