--- a/UrMaps_2_fase/index.html
+++ b/UrMaps_2_fase/index.html
@@ -119,6 +119,9 @@
                 <!-- Script para el formulario de búsqueda -->
                 <script src="map_script.js"></script>
 
+                <script src="Button_script.js"></script>
+
+
 
             </div>
     </main>
