--- a/UrMaps_2_fase/index.html
+++ b/UrMaps_2_fase/index.html
@@ -69,12 +69,26 @@
             </div>
         </section>
 
+        <section class="search-social">
+            <!-- Barra de búsqueda -->
+            <!-- Botones de redes sociales -->
+            <div class="social-icons">
+                <button class="btn btn-primary rounded-circle" href = "https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+                    <img src="buttons/facebook.png" alt="Facebook"></button>
+                <button class="btn btn-primary rounded-circle"><img src="buttons/twitter.png"
+                        alt="Twitter"></button>
+                <button class="btn btn-primary rounded-circle"><img src="buttons/instagram.png"
+                        alt="Instagram"></button>
+            </div>
+        </section>
+
 
     </header>
     <!-- Contenido principal -->
     <main>
-
+        <div class="gradiante">
         <aside>
+            <div class="pathlist-container">
             <div class="container-fluid">
                 <!-- Botón para mostrar menú -->
 
@@ -92,22 +106,14 @@
                         <li><button type="button" id="m11">Comedor</button></li>
                     </ul>
                 </div>
+            </div>
+            </div>
+            <script src="items_script.js"></script>
         </aside> <!--a la izq de la pantalla-->
 
-        <div class="gradiante">
+
             <!-- Sección de búsqueda y redes sociales -->
-            <section class="search-social">
-                <!-- Barra de búsqueda -->
-                <!-- Botones de redes sociales -->
-                <div class="social-icons">
-                    <button class="btn btn-primary rounded-circle" href = "https://www.youtube.com/watch?v=dQw4w9WgXcQ">
-                        <img src="buttons/facebook.png" alt="Facebook"></button>
-                    <button class="btn btn-primary rounded-circle"><img src="buttons/twitter.png"
-                            alt="Twitter"></button>
-                    <button class="btn btn-primary rounded-circle"><img src="buttons/instagram.png"
-                            alt="Instagram"></button>
-                </div>
-            </section>
+            
             <div class="content-wrapper">
                 <!-- Menú lateral -->
 
@@ -121,6 +127,7 @@
 
 
             </div>
+        </div>
     </main>
 
 </body>
