--- a/UrMaps_2_fase/index.html
+++ b/UrMaps_2_fase/index.html
@@ -21,7 +21,7 @@
     <!-- Fuente de texto para el encabezado -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ropa+Sans&family=Varela+Round&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Graduate&display=swap" rel="stylesheet">
     <!-- Hojas de estilos para Leaflet (mapa) -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
         integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
@@ -65,6 +65,7 @@
                 <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="#" data-lang="EN">EN</a></li>
                     <li><a class="dropdown-item" href="#" data-lang="ES">ES</a></li>
+                    <li><a class="dropdown-item" href="#" data-lang="ES">FR</a></li>
                 </ul>
             </div>
         </section>
@@ -94,21 +95,27 @@
 
                 <div class="container-fluid">
                     <ul id="pathList">
-                        <li><button type="button" id="m2">Entrada</button></li>
-                        <li><button type="button" id="m3">Escalera Caldas</button></li>
-                        <li><button type="button" id="m4">Baños Carrasquilla</button></li>
-                        <li><button type="button" id="m5">Entrada Teatrino</button></li>
-                        <li><button type="button" id="m6">Síndico</button></li>
-                        <li><button type="button" id="m7">Aula Mutis</button></li>
-                        <li><button type="button" id="m8">La bordadita</button></li>
-                        <li><button type="button" id="m9">Cuenteros</button></li>
-                        <li><button type="button" id="m10">Escaleras Casur</button></li>
-                        <li><button type="button" id="m11">Comedor</button></li>
+                        <li><button type="button" id="m2"><b>Entrada</b></button></li>
+                        <li><button type="button" id="m3"><b>Escalera Caldas</b></button></li>
+                        <li><button type="button" id="m4"><b>Baños Carrasquilla</b></button></li>
+                        <li><button type="button" id="m5"><b>Entrada Teatrino</b></button></li>
+                        <li><button type="button" id="m6"><b>Síndico</b></button></li>
+                        <li><button type="button" id="m7"><b>Aula Mutis</b></button></li>
+                        <li><button type="button" id="m8"><b>La bordadita</b></button></li>
+                        <li><button type="button" id="m9"><b>Cuenteros</b></button></li>
+                        <li><button type="button" id="m10"><b>Escaleras Casur</b></button></li>
+                        <li><button type="button" id="m11"><b>Comedor</b></button></li>
                     </ul>
                 </div>
             </div>
             </div>
             <script src="items_script.js"></script>
+
+
+            <div class="info-l">
+                
+
+            </div>
         </aside> <!--a la izq de la pantalla-->
 
 
