Revert "Merge branch 'main' of https://github.com/QueenR1014/URMaps"
This reverts commit e49c032306d4964138642c4cfbe19633ff0ac0e0, reversing
changes made to 2aa1168da24ab5e452ff4bffab12a491640010df.

--- a/UrMaps_2_fase/index.html
+++ b/UrMaps_2_fase/index.html
@@ -342,6 +342,12 @@
 
             <script src="items_script.js"></script>
 
+
+            <div class="info-l">
+
+
+            </div>
+
             <!-- Script para el formulario de búsqueda -->
             <script src="map_script.js"></script>
 
