--- a/UrMaps_2_fase/index.html
+++ b/UrMaps_2_fase/index.html
@@ -19,10 +19,11 @@
     <!-- Estilos personalizados -->
     <link rel="stylesheet" href="style.css">
     <!-- Fuente de texto -->
+    <!--Merriweather y Karla-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Nabla&family=Nova+Cut&family=Ropa+Sans:ital@0;1&family=Varela+Round&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
         rel="stylesheet">
     <!-- Hojas de estilos para Leaflet (mapa) -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
