--- a/UrMaps_2_fase/index.html
+++ b/UrMaps_2_fase/index.html
@@ -203,7 +203,7 @@
                         </div>
                         <a href="#" class="hex-content" id="m4">
                             <span class="hex-content-inner">
-                                <span class="title" id="BañosClaustroColonial"><b>Baños Carrasquilla</b></span>
+                                <span class="title" id="BañosClaustroColonial"><b>Baños Claustro</b></span>
                             </span>
                             <svg viewBox="0 0 173.20508075688772 200" height="200" width="174" version="1.1"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -303,7 +303,7 @@
                         </div>
                         <a href="#" class="hex-content" id="m8">
                             <span class="hex-content-inner">
-                                <span class="title" id="PlazaCuenteros"><b>Cuenteros</b></span>
+                                <span class="title" id="PlazaCuenteros"><b>La Bordadita</b></span>
                             </span>
                             <svg viewBox="0 0 173.20508075688772 200" height="200" width="174" version="1.1"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -329,7 +329,7 @@
                         <a href="#" class="hex-content" id="m9">
                             <span class="hex-content-inner">
 
-                                <span class="title" id="EscalerasCASUR"><b>Escaleras Casur</b></span>
+                                <span class="title" id="EscalerasCASUR"><b>Cuenteros</b></span>
                             </span>
                             <svg viewBox="0 0 173.20508075688772 200" height="200" width="174" version="1.1"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -353,33 +353,33 @@
                             <div></div>
                         </div>
                         <a href="#" class="hex-content" id="m10">
+                            <span class="hex-content-inner">
+                                <span class="title" id="Comedor"><b>Escaleras Casur</b></span>
+                            </span>
+                            <svg viewBox="0 0 173.20508075688772 200" height="200" width="174" version="1.1"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z"
+                                    fill="#1e2530"></path>
+                            </svg>
+                        </a>
+                    </div>
+                </li>
+                <li>
+                    <div class="hexagon-item">
+                        <div class="hex-item">
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                        </div>
+                        <div class="hex-item">
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                        </div>
+                        <a href="#" class="hex-content" id="m11">
                             <span class="hex-content-inner">
                                 <span class="title" id="Comedor"><b>Comedor</b></span>
-                            </span>
-                            <svg viewBox="0 0 173.20508075688772 200" height="200" width="174" version="1.1"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <path
-                                    d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z"
-                                    fill="#1e2530"></path>
-                            </svg>
-                        </a>
-                    </div>
-                </li>
-                <li>
-                    <div class="hexagon-item">
-                        <div class="hex-item">
-                            <div></div>
-                            <div></div>
-                            <div></div>
-                        </div>
-                        <div class="hex-item">
-                            <div></div>
-                            <div></div>
-                            <div></div>
-                        </div>
-                        <a href="#" class="hex-content" id="m10">
-                            <span class="hex-content-inner">
-                                <span class="title" id="Comedor"><b>La bordadita</b></span>
                             </span>
                             <svg viewBox="0 0 173.20508075688772 200" height="200" width="174" version="1.1"
                                 xmlns="http://www.w3.org/2000/svg">
