cambio de boton a switch  y arreglo del evento para la linea

--- a/UrMaps_2_fase/index.html
+++ b/UrMaps_2_fase/index.html
@@ -119,7 +119,11 @@
         <!-- fin traduccion -->
 
         <!--cambio color-->
-        <button id="boton-change">d</button>
+        <label class="switch">
+            <input id="switch-color" type="checkbox" />
+            <span class="slider round icon"></span>
+            <h6>cambio</h6>
+        </label>
 
     </header>
     <!-- Contenido principal -->
